# rotary-embedding-torch

./: README.md  pyproject.toml  ruff.toml
.serena/: project.yml
.serena/memories/repo/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
src/rotary_embedding_torch/: __init__.py  rotary_embedding_torch.py
tests/: test_rope.py
