[project]
name = "rotary-embedding-torch"
version = "0.8.9"
description = "Rotary Embedding - Pytorch"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Phil Wang", email = "lucidrains@gmail.com" }]
keywords = ["artificial intelligence", "deep learning", "positional embedding"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "einops>=0.7",
  "hunterMakesPy>=0.5.3",
  "torch>=2.0",
  "torch-einops-kit>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/lucidrains/rotary-embedding-torch"
Repository = "https://github.com/lucidrains/rotary-embedding-torch"

[dependency-groups]
dev = [
  "coverage>=7.10.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.5",
]
testing = ["numpy"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.coverage.run]
source = ["src/rotary_embedding_torch"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError"
]

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "N",  # pep8-naming
  "ANN",  # annotations
  "S",  # bandit
  "A",  # builtins
  "C4",  # comprehensions
  "EM",  # errmsg
  "ICN",  # import-conventions
  "PIE",  # pie
  "PT",  # pytest-style
  "RSE",  # raise
  "RET",  # return
  "TID",  # tidy-imports
  "ARG",  # unused-arguments
  "TD",  # todos
  "PL",  # pylint
  "FLY",  # flynt
  "FA",  # flake8-future-annotations
]

[tool.uv]
default-groups = "all"
