[project]
name = "rotary-embedding-torch"
version = "0.8.9"
description = "Rotary Embedding - Pytorch"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Phil Wang", email = "lucidrains@gmail.com" }]
keywords = ["artificial intelligence", "deep learning", "positional embedding"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "einops>=0.7",
  "hunterMakesPy",
  "torch>=2.0.0",
  "torch-einops-kit>=",
]

[project.urls]
Homepage = "https://github.com/hunterhogan/rotary-embedding-torch"
Repository = "https://github.com/hunterhogan/rotary-embedding-torch"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]
testing = ["numpy"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.coverage.run]
source = ["src/rotary_embedding_torch"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError"
]

[tool.pydoclint]
style = "numpy"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false

[tool.uv]
default-groups = "all"
